pushing before we leave

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,16 @@
 .App-link {
   color: #09d3ac;
 }
+
+div::after {
+  content: "";
+  background: url(bg.jpg);
+  background-size:
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
+}
