--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,7 +21,7 @@
   color: #09d3ac;
 }
 
-div::after {
+/* div::after {
   content: "";
   background: url(bg.jpg);
   background-size:
@@ -32,4 +32,4 @@ div::after {
   right: 0;
   position: absolute;
   z-index: -1;   
-}
+} */
