--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: url("./bg.jpg") no-repeat center center fixed ;
+  /* background: url("./bg.jpg") no-repeat center center fixed ; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
