updated nav links, bg and slider cards

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,19 +17,15 @@
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
-}
-
-/* div::after {
+div::after {
   content: "";
   background: url(bg.jpg);
-  background-size:
-  opacity: 0.5;
+  background-size: cover;
+  opacity: 0.2;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
   z-index: -1;   
-} */
+}
