--- a/client/src/components/LoginTest/login.css
+++ b/client/src/components/LoginTest/login.css
@@ -70,7 +70,8 @@ input {
     color: red;
     font-weight: bold;
     font-size: 20px;
-    margin-left: 5px;
+    margin-left: 95px;
+    margin-top: 10px;
 }
 
 .password {
@@ -78,7 +79,8 @@ input {
     color: red;
     font-weight: bold;
     font-size: 20px;
-    margin-left: 5px;
+    margin-left: 95px;
+    margin-top: 10px;
 }
 
 .submit {
@@ -146,7 +148,3 @@ input {
     font-size: 20px;
     font-weight: bold;
 }
-
-/* .btn {
-    background-color: red;
-} */
