--- a/client/src/components/LoginTest/register.css
+++ b/client/src/components/LoginTest/register.css
@@ -45,20 +45,32 @@
 
 .form-group {
     text-align: center;   
-    border-style: solid;
+    /* border-style: solid;
     border-width:3px;
     border-top-left-radius: 40px;
-    border-bottom-right-radius: 40px; 
-    background:rgb(0, 208, 255);
+    border-bottom-right-radius: 40px; */ 
+    background: rgba(255, 255, 255, 0.81);
     width:335px;
     padding:20px;
-    /*float:left; remove this*/
-    margin:15px;
- 
-    /*add this*/ 
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-align: left;
     display:inline-block;
     position:relative;
 
+}
+
+.button-holder{
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+
+.form-wrap {
+    display: block;
+    text-align: center;
 }
 
 .un {
