--- a/client/src/components/LoginTest/login.css
+++ b/client/src/components/LoginTest/login.css
@@ -17,6 +17,7 @@
     text-align: center;
 }
 
+
 /* .footer {
     padding: 10px;
 }
@@ -127,11 +128,11 @@ input {
 
 .form-group {
     text-align: center;   
-    border-style: solid;
-    border-width:3px;
-    border-top-left-radius: 40px;
-    border-bottom-right-radius: 40px; 
-    background:rgb(0, 208, 255);
+    /* border-style: solid;
+    border-width:3px; */
+    /* border-top-left-radius: 40px;
+    border-bottom-right-radius: 40px;  */
+    /* background:rgb(0, 208, 255); */
     width:335px;
     padding:20px;
     /*float:left; remove this*/
