--- a/client/src/components/Home/index.css
+++ b/client/src/components/Home/index.css
@@ -2,7 +2,7 @@
     opacity: 0.1;
 }
 
-.cardy {
+ .cardy {
     width: 350px;
     text-align: center;
     margin: 10px;
@@ -11,9 +11,8 @@
 
 img {
     height: 200px;
-    width: 10rem;
+    width: 7rem;
     vertical-align: baseline;
-    object-fit: fill;
 }
 
 .card-text {
@@ -25,44 +24,11 @@ img {
     /* flex-wrap: nowrap; */
     /* flex-wrap: wrap;  */
     overflow-x: auto;
-    margin-left: .5%;
-    margin-right: .5%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
-.recent {
-   clear: left; 
-   padding-top: 80px;
-   margin-top: 40px;
-   border-top: 40px;
-
+.jumbotron {
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
-
-
-.intro {
-    width: 750px;
-    height: 400px;
-    margin: auto;
-    background-color: rgba(255, 255, 255, 0.5);
-    text-align: auto;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    border-bottom: 3px solid rgba(255,255,255,0.16);
-    padding: 60px 16px;
-    margin-bottom: 40px;
-}
-
-#wordart {
-    width: 300px;
-    height: 300px;
-    border-radius: 25px;
-    float: left;
-    margin: 30px;
-    z-index: 2;
-    
-}
-
-.banner {
-    margin-top: 20px;
-    justify-content: center;
-}    
