changed carousel, deleted files

--- a/client/src/components/MovieSlider/slider.css
+++ b/client/src/components/MovieSlider/slider.css
@@ -1,8 +1,27 @@
-.imgStyle {
-    width: 400px; 
-    display: block; 
-}
-
 #overview {
     font-size: 15px;
 }
+.card-header {
+    font-size: 22px;
+}
+img {
+    width: 33%;
+    height: 50%;
+}
+.carousel1 {
+    flex: 0 0 auto;
+    flex-wrap: nowrap;
+}
+
+.backBtn {
+    flex: 0 0 auto;
+    align-self: flex-start;
+}
+.slider1 {
+    flex: 0 0 auto;
+}
+
+.slide1 {
+    flex: 1 0 auto;
+}
+
