centered blue buttons in login and register

--- a/client/src/components/LoginTest/login.css
+++ b/client/src/components/LoginTest/login.css
@@ -17,6 +17,15 @@
     text-align: center;
 }
 
+.form-wrap {
+    display: block;
+    text-align: center;
+    align-content: unset;
+}
+
+.btn {
+    float: none;
+}
 
 /* .footer {
     padding: 10px;
