--- a/client/src/components/LoginTest/register.css
+++ b/client/src/components/LoginTest/register.css
@@ -7,7 +7,11 @@
     margin-top: 150px;
 }
 
-
+.form-wrap {
+    display: block;
+    text-align: center;
+    align-content: unset;
+}
 
 .register {
     text-align: center;   
