--- a/client/src/components/LoginTest/login.css
+++ b/client/src/components/LoginTest/login.css
@@ -163,3 +163,12 @@ input {
     width: 400px;
     margin: auto;
 }
+.form-wrap {
+    display: block;
+    text-align: center;
+    align-content: unset;
+}
+
+.btn {
+    float: none;
+}
