--- a/client/src/components/LoginTest/register.css
+++ b/client/src/components/LoginTest/register.css
@@ -118,3 +118,8 @@
     width: 400px;
     margin: auto;
 }
+.form-wrap {
+    display: block;
+    text-align: center;
+    align-content: unset;
+}
