--- a/client/src/components/Secure/secure.css
+++ b/client/src/components/Secure/secure.css
@@ -34,3 +34,30 @@
     padding-right: 10px;
     margin: 10px;
 }
+
+.container {
+    display: flex;
+    text-align: center;
+    flex-direction: col;
+    margin: auto;
+    padding: 38px;
+    position: inherit;
+    flex-flow: column;
+}
+.options {
+        /* flex-direction: row; */
+        list-style-type: none;
+        /* margin: 50px; */
+        display: flex;
+        align-self: center;
+}
+
+.btn {
+    align-self: flex-start;
+    margin: 50px;
+}
+.title {
+    text-align: center;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+    text-shadow: -3px 1px 4px black;
+}
